--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,7 +20,7 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-        <%= link_to('Mastodon Twitter Crossposter', :root, class: 'navbar-brand') %>
+        <%= link_to('Space Crossposter', :root, class: 'navbar-brand') %>
           </div>
           <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
@@ -29,9 +29,11 @@
             <ul class="nav navbar-nav">
               <li><%= link_to(t(:features), 'https://github.com/renatolond/mastodon-twitter-poster#features', target: :_blank) %></li>
             </ul>
+<!--
             <ul class="nav navbar-nav">
               <li><%= link_to(t(:status), 'https://metrics.librato.com/s/public/241h4bwu2?duration=21600', target: :_blank) %></li>
             </ul>
+-->
             <% if current_user %>
             <ul class="nav navbar-nav navbar-right">
               <li><%= link_to(t(:log_out), destroy_user_session_path, method: :delete) %></li>
@@ -72,7 +74,7 @@
     <footer class="footer">
       <div class="container">
 
-        <p><%=t :service_ran_by%> <%=link_to('@renatolond@masto.donte.com.br', 'https://masto.donte.com.br/@renatolond') %> / <%=link_to('@renatolond', 'https://twitter.com/renatolond')%>. <%=link_to(t(:source_code_and_issues), 'https://github.com/renatolond/mastodon-twitter-poster') %>.</br>
+        <p><%=t :service_ran_by%> <%=link_to('@kdy@im-in.space', 'https://im-in.space/@kdy') %> / <%=link_to('@0kody', 'https://twitter.com/0kody')%>. <%=link_to(t(:source_code_and_issues), 'https://github.com/renatolond/mastodon-twitter-poster') %>.</br>
         <%=t(:for_news_and_status)%> <%= link_to('https://masto.donte.com.br/@crossposter', class: 'btn btn-social btn-sm btn-mastodon', target: '_blank') do %>
         <i class="fa fa-mastodon" aria-hidden="true"></i> <%= t('follow_us_on_the_fediverse') %>
         <% end %></p>
