--- a/app/views/users/mastodon_identifier.html.erb
+++ b/app/views/users/mastodon_identifier.html.erb
@@ -8,7 +8,7 @@
         <%= form_tag user_mastodon_omniauth_authorize_path, method: :post, 'data-toggle' => 'validator' do %>
           <div class="form-group">
             <%= label_tag(:identifier, t('masto_login.identifier')) %>
-            <%= text_field_tag(:identifier, '', type: 'email', class: 'form-control', placeholder: 'crossposter@masto.donte.com.br', required: '', 'data-error' => t('masto_login.invalid_identifier') ) %>
+            <%= text_field_tag(:identifier, '', type: 'email', class: 'form-control', placeholder: 'status@im-in.space', required: '', 'data-error' => t('masto_login.invalid_identifier') ) %>
             <div class="help-block with-errors"></div>
           </div>
           <div class="form-group">
