--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,7 +27,7 @@
               <li><%= link_to(t(:home), root_path)%></li>
             </ul>
             <ul class="nav navbar-nav">
-              <li><%= link_to(t(:features), 'https://github.com/renatolond/mastodon-twitter-poster#features', target: :_blank) %></li>
+              <li><%= link_to(t(:features), 'https://github.com/im-in-space/mastodon-twitter-poster#features', target: :_blank) %></li>
             </ul>
 <!--
             <ul class="nav navbar-nav">
@@ -74,8 +74,8 @@
     <footer class="footer">
       <div class="container">
 
-        <p><%=t :service_ran_by%> <%=link_to('@kdy@im-in.space', 'https://im-in.space/@kdy') %> / <%=link_to('@0kody', 'https://twitter.com/0kody')%>. <%=link_to(t(:source_code_and_issues), 'https://github.com/renatolond/mastodon-twitter-poster') %>.</br>
-        <%=t(:for_news_and_status)%> <%= link_to('https://masto.donte.com.br/@crossposter', class: 'btn btn-social btn-sm btn-mastodon', target: '_blank') do %>
+        <p><%=t :service_ran_by%> <%=link_to('@kdy@im-in.space', 'https://im-in.space/@kdy') %> / <%=link_to('@0kody', 'https://twitter.com/0kody')%>. <%=link_to(t(:source_code_and_issues), 'https://github.com/im-in-space/mastodon-twitter-poster') %>.</br>
+        <%=t(:for_news_and_status)%> <%= link_to('https://im-in.space/@status', class: 'btn btn-social btn-sm btn-mastodon', target: '_blank') do %>
         <i class="fa fa-mastodon" aria-hidden="true"></i> <%= t('follow_us_on_the_fediverse') %>
         <% end %></p>
       </div>
