--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -48,6 +48,10 @@
           </div><!--/.nav-collapse -->
         </div><!--/.container-fluid -->
       </nav>
+      <div class="alert alert-warning" role="alert">
+        Consider this instance as a <strong>beta</strong>.<br/>
+        It might break and not crosspost some messages for whatever reason.
+      </div>
       <% if flash[:success] %>
       <div class="alert alert-success" role="alert">
         <%= flash[:success] %>
